v0.1.0/_sources/projections/cyl/cyl_cassini.rst.txt
.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        Click :ref:`here <sphx_glr_download_projections_cyl_cyl_cassini.py>`     to download the full example code
    .. rst-class:: sphx-glr-example-title

    .. _sphx_glr_projections_cyl_cyl_cassini.py:


Cassini Cylindrical
============================

``Clon0/lat0/width``: ``lon0`` and ``lat0`` specifies the projection center.



.. image:: /projections/cyl/images/sphx_glr_cyl_cassini_001.png
    :class: sphx-glr-single-img


.. rst-class:: sphx-glr-script-out

 Out:

 .. code-block:: none


    <IPython.core.display.Image object>





|


.. code-block:: default

    import pygmt

    fig = pygmt.Figure()
    # Use the ISO code for Madagascar (MG) and pad it by 2 degrees (+R2)
    fig.coast(projection="C47/-19/8i", region="MG+R2", frame="afg", land="gray", borders=1)
    fig.show()


.. rst-class:: sphx-glr-timing

   **Total running time of the script:** ( 0 minutes  1.474 seconds)


.. _sphx_glr_download_projections_cyl_cyl_cassini.py:


.. only :: html

 .. container:: sphx-glr-footer
    :class: sphx-glr-footer-example



  .. container:: sphx-glr-download sphx-glr-download-python

     :download:`Download Python source code: cyl_cassini.py <cyl_cassini.py>`



  .. container:: sphx-glr-download sphx-glr-download-jupyter

     :download:`Download Jupyter notebook: cyl_cassini.ipynb <cyl_cassini.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
